--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "mocha": "^5.2.0",
+    "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.2.1",
     "mochawesome-report-generator": "^6.2.0",
     "ngx-cypress-builder": "^1.0.2",
